--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,131 @@
 /* TODO Add site wide styles */
+
+.reg-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width: 400px;
+    min-height: 90vh;
+}
+
+form {
+    padding: 1rem 3rem;
+    padding-bottom: 2rem;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 300ms ease;
+    width: 300px;
+}
+
+form > div {
+    padding: 8px 0;
+}
+
+label {
+    font-weight: bold;
+}
+
+.staff label[for="instructor"],
+.staff label[for="student"] {
+    font-weight: unset;
+}
+
+.form-group:first-child,
+.form-group:nth-child(2),
+.form-group:nth-child(3),
+.form-group:nth-child(6) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2px;
+}
+
+input {
+    padding: 5px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #969696;
+    transition: all 200ms ease;
+}
+
+input:focus {
+    border-color: #969696;
+    box-shadow: 0px 1px 6px 3px rgba(50, 145, 255, 0.32);
+}
+
+.form-group.has-error {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-group.has-error input {
+    outline: none;
+    border: 1px solid #8b0000;
+}
+
+.form-group.has-error input:focus {
+    box-shadow: 0px 1px 8px 3px rgba(139, 0, 0, 0.32);
+}
+
+.form-group.has-error label {
+    color: darkred;
+}
+
+.form-group.has-error .error-message {
+    color: darkred;
+    font-size: 15px;
+}
+
+select {
+    padding: 4px;
+    border-radius: 5px;
+    border-color: #969696;
+    margin-top: 5px;
+}
+
+textarea {
+    outline: none;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+textarea:focus {
+    box-shadow: 0px 1px 8px 3px rgba(50, 145, 255, 0.32);
+}
+
+.mail-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.mail-list label {
+    font-weight: unset;
+}
+
+button {
+    padding: 5px 0;
+    font-weight: bold;
+    background-color: lightgrey;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #b3b1b1;
+    border: 1px solid #b3b1b1;
+}
+
+.staff input,
+.mail-list input {
+    cursor: pointer;
+}
